noinst_LTLIBRARIES = libfuzzylite.la
libfuzzylite_la_LDFLAGS = -static
libfuzzylite_la_SOURCES = \
	AreaCentroidAlgorithm.cpp \
	FuzzyOperation.cpp \
	OutputLVar.cpp \
	CompoundTerm.cpp \
	FuzzyOperator.cpp \
	RectangularTerm.cpp \
	DescriptiveAntecedent.cpp \
	FuzzyOr.cpp \
	RuleBlock.cpp \
	DiscreteTerm.cpp \
	FuzzyRule.cpp \
	ShoulderTerm.cpp \
	FunctionTerm.cpp \
	Hedge.cpp \
	SingletonTerm.cpp \
	FuzzyAnd.cpp \
	HedgeSet.cpp \
	StrOp.cpp \
	FuzzyAntecedent.cpp \
	InfixToPostfix.cpp \
	TakagiSugenoConsequent.cpp \
	FuzzyConsequent.cpp \
	InputLVar.cpp \
	TakagiSugenoRule.cpp \
	FuzzyDefuzzifier.cpp \
	LinguisticTerm.cpp \
	TakagiSugenoTerm.cpp \
	FuzzyEngine.cpp \
	LinguisticVariable.cpp \
	test.cpp \
	FuzzyException.cpp \
	main.cpp \
	TrapezoidalTerm.cpp \
	FuzzyExceptions.cpp \
	MamdaniConsequent.cpp \
	TriangularTerm.cpp \
	FuzzyModulation.cpp \
	MamdaniRule.cpp

