pkglib_LTLIBRARIES = GeniusAI.la
GeniusAI_la_LIBADD = $(top_builddir)/lib/libvcmi.la
GeniusAI_la_LDFLAGS = -L$(top_builddir)/lib -module
GeniusAI_la_SOURCES = \
	AIPriorities.cpp \
	AIPriorities.h \
	BattleHelper.cpp \
	BattleHelper.h \
	BattleLogic.cpp \
	BattleLogic.h \
	CGeniusAI.cpp \
	CGeniusAI.h \
	Common.h \
	DLLMain.cpp \
	GeneralAI.cpp \
	GeneralAI.h \
	neuralNetwork.cpp \
	neuralNetwork.h
